added API feautures, swagger and others

--- a/django_app/templates/SignIn.html
+++ b/django_app/templates/SignIn.html
@@ -68,7 +68,7 @@
 
         <div class="affr afkd afke afkf">
             <div class="afhi afhp afhs afil afkh afkj afko afky afla aflb aflc">
-                <form action="{% url 'signin' %}" method="POST" class="afgs">
+                <form action="{% url 'SignIn' %}" method="POST" class="afgs">
                     {% csrf_token %}
 
                     <div>
